--- a/hora do dia img/horadodia.index.html
+++ b/hora do dia img/horadodia.index.html
@@ -11,7 +11,7 @@
 
  <body onload=" carregar()">
        <header>
-        <h1>Hora do dia</h1>
+        <h1>Hora do dia!</h1>
        </header>
 
        <section>
